心理测试报表

--- a/newGuo/index.html
+++ b/newGuo/index.html
@@ -125,12 +125,14 @@
         <div class="swipe">
             <ul id="slide" style="">
                 <li style='display:block;'>
-                    <div class="index-banner-1" onclick="window.open('http://baidu.com')">
+                    <div class="index-banner" onclick="window.open('http://baidu.com')">
+                        <img src="images/banner_01.jpg" alt="中国道"/>
                         <a href="javascript:window.open('http://sina.com','_self')" class="btn btn-red purchase-button-position index-purchase-button" style="">立即购买</a>
                     </div>
                 </li>
                 <li style='display:none;'>
-                    <div class="index-banner-2" onclick="window.open('http://baidu.com')">
+                    <div class="index-banner" onclick="window.open('http://baidu.com')">
+                        <img src="images/banner_02.jpg" alt="父亲节"/>
                     </div>
                 </li>
             </ul>
