--- a/weixinApp/test1.html
+++ b/weixinApp/test1.html
@@ -7,8 +7,56 @@
 <body>
 
 </body>
-
 <script>
-    var s = "border-top-bottom";
+    window.onload = function(){
+        var a = "border-top-bottom",b = [];
+        b = a.split("-");
+        for(var i = 0; i < b.length; i++){
+            b[i] = b[i].substring(0,1).toUpperCase() + b[i].substring(1,b[i].length)
+           }
+        alert(b.join(''))
+    }
+
+    /*var str='asdaa';
+    var obj={};
+    for(var i=0,l=str.length,k;i<l;i++){
+        k=str.charAt(i);
+        if(obj[k]){
+            obj[k]++;
+        }else{
+            obj[k]=1;
+        }
+        console.log(obj)
+    }
+    var m=0;
+    var i=null;
+    for(var k in obj){
+        if(obj[k]>m){
+            m=obj[k];
+            i=k;
+        }
+    }
+    alert(i+':'+m);*/
+
+    var str = "jfijwssssssissss";
+    var obj = {};
+    for(var i= 0,l=str.length,k; i < l; i++){
+        k = str.charAt(i);
+        if(obj[k]){
+            obj[k]++;
+        }else{
+            obj[k] = 1;
+        }
+    }
+
+    var m = 0;
+    var i = null;
+    for (var k in obj) {
+        if(obj[k]>m){
+            m = obj[k];
+            i = k;
+        }
+    }
+    alert(i + ":" + m);
 
 </script>
